--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "apontamento-ts": "file:",
     "axios": "^1.7.2",
     "framer-motion": "^5.6.0",
     "jquery": "^3.7.1",
